--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -12,11 +12,9 @@ Here we use it to return all the `posts` by using the filter prop
 
 <SourceList filter="posts">
   {(posts) => (
-    <Flex
+    <Grid
       sx={{
-        flexWrap: 'wrap',
-        ml: (theme) => `-${theme.space[2]}px`,
-        mr: (theme) => `-${theme.space[2]}px`,
+        gridTemplateColumns: ['1fr', '1fr', '1fr 1fr'],
       }}
     >
       {posts
@@ -38,9 +36,6 @@ Here we use it to return all the `posts` by using the filter prop
                 display: 'flex',
                 flex: '1 1 auto',
                 flexDirection: 'column',
-                mb: 3,
-                maxWidth: ['100%', '100%', '50%', '50%'],
-                width: ['100%', '100%', '50%', '50%'],
               }}
             >
               <Link
@@ -50,7 +45,6 @@ Here we use it to return all the `posts` by using the filter prop
                   display: 'flex',
                   flex: '1 1 auto',
                   flexDirection: 'column',
-                  m: (theme) => `0px ${theme.space[2]}px`,
                   minHeight: '1px',
                 }}
               >
@@ -88,6 +82,6 @@ Here we use it to return all the `posts` by using the filter prop
             </Box>
           )
         })}
-    </Flex>
+    </Grid>
   )}
 </SourceList>
