--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -1,14 +1,10 @@
 ---
-navigationLabel: Posts
+navigationLabel: Articles
 ---
 
 import { format } from 'date-fns'
 
 # posts
-
-You can use the `<SourceList filter="posts" />` component from any `.mdx`.
-
-Here we use it to return all the `posts` by using the filter prop
 
 <SourceList filter="posts">
   {(posts) => (
