--- a/demo/src/posts/post-1.mdx
+++ b/demo/src/posts/post-1.mdx
@@ -1,20 +1,18 @@
 ---
-title: Post 1
-date: 2020-04-26
-dateModified: 2020-05-05
-author: Paul Scanlon
-tags: ['JavaScript', 'React', 'GatsbyJs', 'HTML', 'CSS', 'theme-ui']
+title: Comparing Certificate Lifecycle automation with Consul & Cert-Manager
+date: 2022-04-15
+dateModified: 2022-04-15
+author: Dillon Watts
+tags: ['Terraform', 'GKE', 'Consul', 'Cert-Manager', 'PKI']
 featuredImage: markus-spiske-466ENaLuhLY-unsplash.jpg
 embeddedImages:
   - markus-spiske-FXFz-sW0uwo-unsplash.jpg
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus
-justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec
-metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas
-turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
-
-```sh
+Today, we will be looking at the various differences how we can automate
+the lifecycle of a certificate using both Hashicorp Consul and GCP's cert-manager
+<!-- Code Block -->
+<!-- ```sh
 npm install aThing `aThing` 'aThing' "aThing"
 ```
 
@@ -32,8 +30,8 @@ npm install aThing `aThing` 'aThing' "aThing"
   timeToRead={timeToRead}
   wordCount={wordCount}
 />
-```
-
+``` -->
+<!-- 
 <Grid sx={{ gridTemplateColumns: ['1fr', '1fr 1fr'] }}>
   <Box>
     Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum
@@ -42,10 +40,8 @@ npm install aThing `aThing` 'aThing' "aThing"
   <Box>
     <GatsbyImage alt="embedded-image-1" image={props.embedded.image1} />
   </Box>
-</Grid>
+</Grid> -->
 
-### [Gatsby](#gatsby)
+### [Link to Code](#gatsby)
 
-`<GatsbyImage alt='...' image={...}/>`
 
-<Box as="pre">{JSON.stringify(props.embedded.image1, null, 2)}</Box>
