--- a/demo/src/pages/resume.mdx
+++ b/demo/src/pages/resume.mdx
@@ -97,7 +97,7 @@ import { format } from 'date-fns'
   - 2016 - 2018 - Systems Administrator (Windows On-Prem)
 
 # Certifications
- - ### Security+
+ - ### Security(+)
  - ### CySA
 
 </Grid>
